Topic_1 Data types and variables/Data_types.java~
// java version : openjdk 17.0.8.1 2023-08-24

 class P1
{
		
		public static void main(String[] args)
		{
				System.out.println("Data types in java ");
				
				
				// data types 
				
				
				// 1] byte size = 1 byte 
				
				
				/*
				
				
				byte b = true;
				
				
				P1.java:51: error: incompatible types: boolean cannot be converted 	
				to byte
				
					
				
				*/
				
				
				// 2 ] short size 2 byte 16 bits 
				
				
					
				//short i = 327678;
				/*
				
				16 bit processors uses short datatype 
				
				
				as there are not 16 bit prcessors present nowdays 
				so short datatyope is not much in use 
				
				
								
				P1.java:71: error: incompatible types: possible lossy conversion 	
				from int to short
				short i = 327678;

				*/
				
				
				// 3 ] int size 4 bytes
					
					// int data type is uesd to represents the whole number 
					
					
					
					/*
					int z = 20000000000000;
					
					P1.java:91: error: integer number too large
					int z = 20000000000000;

					
					*/
					
					
					/*
					int nz = 12000000000l;
						
						there is slight change in the error when we give long value
						to int 
						
						as default value  given is int and so 
						
						
						
								
						P1.java:101: error: incompatible types: possible lossy 	
						conversion from long to int
						int nz = 12000000000l;

					
					*/
				

				
				
				// 4 ] long size 8 byte 
				
					// length method of file system has return type long 
					
					
				
				
	// all the above data types are meant for integers and not for real numbers 
	// fractional numbers 
	
	
	// floating point data types 
			
				// 5 ]  float size 4 byte  6 ] double size 8 bytes 
				
			 	System.out.println((float)10/(float)3);
			 	//3.3333333

					// accuracy up to 7 decimal places 
					
				System.out.println(10.0/3.0);
				//3.3333333333333335 
				// upto 17 decimal places 
				
				// default floating number data type is double 
				
				
	
	// boolean size virtual machine dependent 
	
		// default value of boolean is = false 
		/*
			boolean b = True;
			
			
			1.java:156: error: cannot find symbol
			boolean b = True;
				        ^
			  symbol:   variable True
			  location: cl
					
		*/
		
		
		// charactor 
		
		// 1 ] char  size == 2 byte  - > 65536 unsigned 
		
			//  unicode character 
					
//   ============================================================================================		
			
		
		// declearign the numbers in octal , hex and binary format 
			
			// 1 ] octal
			// prefix 0 (zreo) is used to declare number in octal form
			int a = 016;
			System.out.println(a);	// 14 //  8+6
			
			// 2 ] hex 
			
			// prefix 0x or 0X   is used to declare numebr in hex format 
			int hex = 0x10;
			
			System.out.println(hex);  // 16 
			
			
			// 3 ] binary 
			// prefix 0b is used to represent numebr in binary format 
			
			int bin = 0b1001;
			
			System.out.println(bin); // 9 
			
			
			
			
			
			
		}

}








